# v8-archive

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .php_cs  .php_cs.dist  .phpstan.neon  .phpunit.xml  .scrutinizer.yml  .sonarcloud.properties  .travis.yml  DOCKER.md  Dockerfile  README.md  admin  bubble.cpp  build.sh  composer.json  dev  docker-compose.yml  docker-entrypoint.sh  index.php  package-lock.json  package.json  phinx.yml  phpbench.json  phpstan.neon  phpunit.php  phpunit.xml  phpunit.xml.dist  readme.md  server.php  sonar-project.properties
.github/: FUNDING.yml
api/: .gitpod.yml  .htaccess  .travis.yml  api.php  bootstrap.php  composer.json  config_sample.php  gitpod-helper.sql  index.php  ruckusing.conf.php  schema.sql
app/: .prettierrc  README.md  package-lock.json  package.json  postcss.config.js  vue.config.js
blog-template/: .browserslistrc  .eleventy.js  .gitignore  .lightserverrc  .prettierrc  README.md  package-lock.json  package.json  postcss.config.js
config/: _example.php  api.php  api_sample.php
demo-data/: README.md
deploy-script/: .gitignore  README.md  deploy.sh
docker/: .gitignore  .travis.yml  README.md  api.php
docs/: README.md  package-lock.json  package.json  rfc.md  wip-migrations.md
etc/: .php_cs.dist  (+1 more)
sdk/sdk-python/: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
sdk/sdk-python/.github/workflows/: ci.yml
sdk/sdk-python/directus/: __init__.py  directus.py  exceptions.py  typing.py
sdk/sdk-python/directus/utils/: __init__.py  apiclient.py
sdk/sdk-python/tests/: test_directus.py
(+3575 files in other folders)
